# wsm_ocp_mvp

./: .bash_history  .env  .gitattributes  .gitignore  API_FLOW_README.md  BinPacking.zipZone.Identifier  Cprd_debianVALIDACAO_TXT_vs_XML.md  README.md  VALIDACAO_TXT_vs_XML.md  apply_boxing.py  check_json_structure.py  check_route_config.py  data 2.xlsx  debug_mapa_runner.py  detect_and_box.py  processar_bash.py  processar_com_api.py  processar_direto.py  processar_massa.py  processar_via_api.py  processar_xmls_direto.py  resumo_macro.md  validar_kpi.py  validar_txt_vs_xml.py  wms-itemsboxing.zipZone.Identifier
BinPacking/src/: __init__.py  requirements.txt  setup.cfg
BinPacking/src/boxing/: boxes.py  caixaStep.py  caixa_step_weight_checker.py  configuration.py  family_separator.py  final_result_processor.py  garrafeiraStep.py  garrafeira_step_weight_checker.py  input.py  items.py  logger.py  marketplace_items.py  metrics.py  orders.py  output.py  outputToInput.py  packer.py  pacoteStep.py  pacote_step_weight_checker.py  sku_checker.py  step.py  unitBoxing.py  utils.py
BinPacking/src/tests/: __init__.py  multiple_real_maps.py  tBoxes.py  tCompareSKUsQts.py  tConfiguration.py  tFakeInput.py  tFakeOutput.py  tItems.py  tMarketplaceItems.py  tOrders.py  tPacker.py  tReadFakeInput.py  tRealMaps.py  tUnitBoxing.py  test_boxing.py
BinPacking/src/tests/samples/: boxes_input.json  input_mapa_0.json  input_mapa_0_com_erros.json  input_mapa_0_gross_weight.json  input_mapa_0_v2.json  input_mapa_0_v3.json  input_mapa_0_v4.json  input_mapa_0_v5.json  input_mapa_real.json  (+20 more)
(+594 files in other folders)
