[metadata]
name = boxing-pkg-warehouse-ambevtech
version = 1.0.0
author = Ana Flávia Lima / AMBEVTECH
author_email = 99821354@ambev.com.br
description = Boxing Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/AMBEV-SA/AMBEV-WMS/_git/BinPacking?version=GBdevops/azure-pipelines&_a=contents
project_urls =
    Bug Tracker = https://dev.azure.com/AMBEV-SA/AMBEV-WMS/_git/BinPacking?version=GBdevops/azure-pipelines&_a=contents
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .